--- a/homeworks/dmytro.kondaurov_DmitriyKondaurov/7-oop/src/styles.css
+++ b/homeworks/dmytro.kondaurov_DmitriyKondaurov/7-oop/src/styles.css
@@ -1,10 +1,30 @@
 body {
   background-color: #FFF7ED;
+  font-family: Roboto, -apple-system, BlinkMacSystemFont, "Segoe UI", Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
 }
 
 .header {
   max-width: 1440px;
-  margin: auto;
+  margin: 0 auto;
+  padding: 10px 20px;
+  background-color: #6200EE;
+  vertical-align: center;
+}
+
+.logo {
+  display: block;
+  padding-right: 15px;
+}
+
+.gallery-name {
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  margin: 0;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 24px;
+  color: #FFF;
 }
 
 .preloader {
@@ -53,6 +73,54 @@ body {
   position: fixed;
   bottom: 20px;
   right: 20px;
+}
+
+.gallery__item.active {
+  z-index: 1;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(0, 0, 0, .8);
+  transition: all 1s;
+}
+
+.gallery__item.active .gallery__image {
+  width: 75%;
+  object-fit: contain;
+}
+
+.close-image-btn {
+  z-index: 2;
+  position: fixed;
+  top: 50px;
+  right: 50px;
+  padding: 10px;
+  border: none;
+  background-color: transparent;
+  color: #FFF;
+  transform: rotate(45deg);
+  font-size: 50px;
+}
+
+.custom-btn-file-upload {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 55px;
+  height: 55px;
+  border-radius: 25px;
+  background-color: #03DAC5;
+  font-size: 24px;
+  line-height: 24px;
+}
+
+.hide {
+  display: none;
 }
 
 @media only screen and (min-width: 768px) {
