--- a/homeworks/Aleksandr.Turuta_turuta7/7-oop/src/style.css
+++ b/homeworks/Aleksandr.Turuta_turuta7/7-oop/src/style.css
@@ -1,12 +1,10 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@500&display=swap");
-
 * {
   margin: 0;
   padding: 0;
 }
 
 .body {
-  font-family: "Roboto", sans-serif;
+  font-family: "Roboto","SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
 }
 
 .header {
