--- a/homeworks/Aleksandr.Turuta_turuta7/7-oop/src/style.css
+++ b/homeworks/Aleksandr.Turuta_turuta7/7-oop/src/style.css
@@ -125,15 +125,12 @@
   color: #FFF;
 }
 
-
 /* Loader */
 
 .loader__container {
   position: absolute;
-  width: 100%;
-  justify-content: center;
-  align-items: center;
   top: 50%;
+  left: 50%;
   display: none;
 }
 
