--- a/homeworks/serhii.kulakivskyi_svkul/7-oop/src/css/index.css
+++ b/homeworks/serhii.kulakivskyi_svkul/7-oop/src/css/index.css
@@ -59,7 +59,7 @@ body {
   flex-direction: column;
   background-color: var(--body-background-color);
   color: var(--font-color-1);
-  font-family: "Roboto", sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji";
   font-weight: 400;
 }
 
