prepend photo and style fixes

--- a/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/styles/style.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/styles/style.css
@@ -69,12 +69,12 @@ body {
 }
 
 .image-preview {
+  position: fixed;
   background: rgba(0, 0, 0, .85);
   min-width: 100%;
   min-height: 100%;
   display: flex;
   justify-content: center;
-  position: absolute;
   top: 0;
   left: 0;
   overflow: hidden;
