--- a/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/styles/style.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/styles/style.css
@@ -88,6 +88,11 @@ body {
   display: none;
 }
 
+.big-image {
+  height: 75%;
+  margin-top: 5%;
+}
+
 .big-image--close {
   position: absolute;
   right: 5%;
@@ -153,6 +158,7 @@ body {
 
   .image {
     flex-direction: column;
+    min-height: 25.5vh;
     width: 45%;
   }
 
