--- a/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/styles/style.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/styles/style.css
@@ -71,6 +71,7 @@ body {
 .image {
   cursor: pointer;
   width: 24%;
+  height: 25vh;
   margin: .5%;
 }
 
@@ -135,6 +136,7 @@ body {
 @media (max-width: 768px) {
 
   .image {
+    height: 25vh;
     width: 30%;
   }
 }
