fix gallery image size for all screen sizes

--- a/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/styles/style.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/styles/style.css
@@ -71,7 +71,7 @@ body {
 .image {
   cursor: pointer;
   width: 24%;
-  height: 25vh;
+  height: 30vh;
   margin: .5%;
 }
 
@@ -131,6 +131,13 @@ body {
   box-shadow: 0 4px 5px rgba(0, 0, 0, .14), 0 1px 10px rgba(0, 0, 0, .12), 0 2px 4px rgba(0, 0, 0, .2);
   border-radius: 28px;
   cursor: pointer;
+}
+
+@media (max-width: 1440px) {
+
+  image {
+    height: 25vh;
+  }
 }
 
 @media (max-width: 768px) {
