change image size

--- a/homeworks/vadim.fedonyuk_Vadim1997/7-oop/src/style.css
+++ b/homeworks/vadim.fedonyuk_Vadim1997/7-oop/src/style.css
@@ -51,9 +51,10 @@ body {
 }
 
 .gallery-section__img {
+  object-fit: cover;
   margin: 5px;
-  max-height: 300px;
-  max-width: 300px;
+  height: 300px;
+  width: 300px;
 }
 
 .gallery-section__upload-input {
