--- a/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/styles/style.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/styles/style.css
@@ -21,8 +21,10 @@ body {
   padding: 0 2%;
 }
 
-.header__burger {
+.header__burger--toggle {
   display: none;
+  width: 30px;
+  height: 30px;
 }
 
 .logo__img {
@@ -49,7 +51,7 @@ body {
 }
 
 .photo-gallery {
-  padding: 1% 3%;
+  padding: 1% 3% 0;
   width: 100%;
   height: 100%;
   display: flex;
@@ -68,12 +70,22 @@ body {
   background: rgba(98, 0, 238, .08);
 }
 
+.image-block {
+  margin: 5px;
+  width: 23%;
+  height: 0;
+  padding-top: 23%;
+  position: relative;
+}
+
 .image {
+  position: absolute;
   object-fit: cover;
   cursor: pointer;
-  width: 24%;
-  height: 30vh;
-  margin: .5%;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
 }
 
 .image-preview {
@@ -97,7 +109,8 @@ body {
 }
 
 .big-image {
-  height: 75%;
+  object-fit: cover;
+  height: 80vh;
   margin-top: 5%;
 }
 
@@ -136,16 +149,31 @@ body {
 
 @media (max-width: 1440px) {
 
-  image {
-    height: 25vh;
+  .big-image {
+    object-fit: cover;
+    width: 45vh;
+    margin-top: 10%;
   }
 }
 
 @media (max-width: 768px) {
 
-  .image {
-    height: 25vh;
+  .image-block {
+    margin: 5px;
     width: 30%;
+    height: 0;
+    padding-top: 30%;
+    position: relative;
+  }
+
+  .image {
+    position: absolute;
+    object-fit: cover;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
   }
 }
 
@@ -155,8 +183,13 @@ body {
     display: none;
   }
 
+  .header__burger--toggle {
+    display: flex;
+    align-items: center;
+    padding: 0 5px;
+  }
+
   .header__burger {
-    display: block;
     width: 24px;
     height: 16px;
     margin: 0 2%;
@@ -166,16 +199,30 @@ body {
     display: none;
     position: absolute;
     width: 50%;
+    z-index: 200;
   }
 
   .photo-gallery {
     justify-content: center;
   }
 
-  .image {
+  .image-block {
     flex-direction: column;
-    min-height: 25.5vh;
+    margin: 5px;
     width: 45%;
+    height: 0;
+    padding-top: 45%;
+    position: relative;
+  }
+
+  .image {
+    position: absolute;
+    object-fit: cover;
+    cursor: pointer;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
   }
 
   .big-image {
@@ -195,8 +242,13 @@ body {
     display: none;
   }
 
+  .header__burger--toggle {
+    display: flex;
+    align-items: center;
+    padding: 0 5px;
+  }
+
   .header__burger {
-    display: block;
     width: 24px;
     height: 16px;
     margin: 0 2%;
@@ -206,12 +258,26 @@ body {
     display: none;
     position: absolute;
     width: 50%;
+    z-index: 200;
+  }
+
+  .image-block {
+    flex-direction: column;
+    margin: 5px;
+    width: 100%;
+    height: 0;
+    padding-top: 100%;
+    position: relative;
   }
 
   .image {
-    flex-direction: column;
-    min-height: 42.5vh;
+    position: absolute;
+    object-fit: cover;
+    cursor: pointer;
     width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
   }
 
   .big-image {
