--- a/homeworks/vadim.fedonyuk_Vadim1997/7-oop/src/style.css
+++ b/homeworks/vadim.fedonyuk_Vadim1997/7-oop/src/style.css
@@ -33,6 +33,14 @@ body {
   padding: 75px 20px;
 }
 
+.gallery-section__images {
+  padding: 0;
+  display: grid;
+  grid-template-columns: repeat(3, 300px);
+  justify-content: center;
+  gap: 10px;
+}
+
 .gallery-section__add-icon {
   width: 24px;
   height: 24px;
@@ -105,4 +113,23 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+}
+
+@media (max-width: 768px) and (min-width: 321px) {
+
+  .gallery-section__images {
+    grid-template-columns: repeat(2, 200px);
+  }
+
+  .gallery-section__img {
+    height: 200px;
+    width: 200px;
+  }
+}
+
+@media (max-width: 320px) {
+
+  .gallery-section__images {
+    grid-template-columns: repeat(1, 300px);
+  }
 }
