--- a/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/styles/style.css
+++ b/homeworks/konstantin.rusenko_ConstantinRusenko/7-oop/src/styles/style.css
@@ -115,7 +115,7 @@ body {
 }
 
 .big-image--close {
-  position: absolute;
+  position: fixed;
   right: 5%;
   top: 5%;
   width: 17px;
@@ -174,6 +174,21 @@ body {
     top: 0;
     left: 0;
   }
+
+  .big-image {
+    object-fit: cover;
+    width: 75%;
+    height: 100%;
+  }
+}
+
+@media (max-width: 568px) {
+
+  .big-image {
+    margin-top: 10%;
+    width: 100%;
+    height: 100%;
+  }
 }
 
 @media (max-width: 450px) {
@@ -225,8 +240,6 @@ body {
   }
 
   .big-image {
-    width: 75%;
-    height: 50vh;
     margin-top: 50%;
   }
 
@@ -281,7 +294,7 @@ body {
 
   .big-image {
     width: 100%;
-    height: 50vh;
+    height: 100%;
     margin-top: 50%;
   }
 
