--- a/homeworks/vadim.fedonyuk_Vadim1997/7-oop/src/style.css
+++ b/homeworks/vadim.fedonyuk_Vadim1997/7-oop/src/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
+  font-family: "Roboto", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
   padding: 0;
   margin: 0;
   font-size: 20px;
@@ -104,7 +104,7 @@ body {
 
 .full-images-container__image {
   max-width: 700px;
-  max-height: 700px;
+  max-height: 400px;
 }
 
 .hidden {
@@ -127,6 +127,11 @@ body {
     height: 200px;
     width: 200px;
   }
+
+  .full-images-container__image {
+    max-width: 400px;
+    max-height: 400px;
+  }
 }
 
 @media (max-width: 425px) {
@@ -138,5 +143,10 @@ body {
   .gallery-section__img {
     height: 300px;
     width: 300px;
+  }
+
+  .full-images-container__image {
+    max-width: 300px;
+    max-height: 300px;
   }
 }
