--- a/homeworks/vadim.fedonyuk_Vadim1997/7-oop/src/style.css
+++ b/homeworks/vadim.fedonyuk_Vadim1997/7-oop/src/style.css
@@ -87,6 +87,23 @@ body {
   background: rgba(0, 0, 0, .85)
 }
 
+.gallery-section__load-icon {
+  width: 50px;
+  height: 50px;
+  -webkit-animation: spin 2s linear infinite;
+}
+
+@-webkit-keyframes spin {
+
+  0% {
+    -webkit-transform: rotate(0deg);
+  }
+
+  100% {
+    -webkit-transform: rotate(360deg);
+  }
+}
+
 .full-images-container__button-close {
   position: absolute;
   top: 20px;
