--- a/homeworks/Aleksandr.Turuta_turuta7/7-oop/src/style.css
+++ b/homeworks/Aleksandr.Turuta_turuta7/7-oop/src/style.css
@@ -3,11 +3,13 @@
   padding: 0;
 }
 
-.body {
+body {
   font-family: "Roboto","SF Pro Text","SF Pro Icons","Helvetica Neue","Helvetica","Arial",sans-serif;
 }
 
 .header {
+  position: sticky;
+  top: 0;
   width: 100%;
   min-height: 56px;
   background: #6200EE;
@@ -18,7 +20,6 @@
 
 .main {
   margin: 32px auto 0;
-  font-family: "Permanent Marker", cursive;
   min-height: 200px;
 }
 
@@ -39,44 +40,62 @@
   height: 56px;
 }
 
-.main__footer-image {
+.main__footer-circle {
   position: fixed;
   bottom: 48px;
   right: 48px;
+  width: 56px;
+  height: 56px;
   transition: .3s;
+  background: #4FDCC7;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 50%;
+  font-size: 24px;
+  border: none
 }
 
-.main__footer-image:hover {
+.main__footer-circle:hover {
   transform: scale(1.2);
 }
 
-.main__footer-input[type=file] {
+.main__footer-input {
   outline: 0;
   opacity: 0;
   pointer-events: none;
   user-select: none
 }
 
-.image__block {
+.image {
   position: relative;
   overflow: hidden;
-  width: 254px;
-  height: 254px;
 }
 
-.image {
-  width: 254px;
-  height: 254px;
+.image__block {
+  width: 100%;
+  height: 100%;
   object-fit: cover;
-  margin: 0 10px 20px;
+}
+
+.main__container {
+  display: grid;
+  grid-template-columns: repeat(4, 22.5vw);
+  grid-auto-rows: 22.5vw;
+  justify-content: center;
+  gap: 16px;
 }
 
 .main-image {
+  position: absolute;
+  display: none;
+}
+
+.loader__modal {
+  position: fixed;
   width: 100%;
-  display: flex;
-  justify-content: left;
-  flex-wrap: wrap;
-  margin: 0 auto;
+  height: 100%;
+  background: rgb(20, 20, 20, .95);
 }
 
 .modal {
@@ -86,9 +105,9 @@
   top: 0;
   left: 0;
   background: rgb(20, 20, 20, .95);
-  display: none;
   margin: 0 auto;
   z-index: 99999999;
+  display: none;
 }
 
 .modal__container {
@@ -103,9 +122,8 @@
 }
 
 .modal__container-image {
-  max-width: 80%;
-  max-height: 80%;
-  height: auto;
+  max-width: 90%;
+  max-height: 90%;
 }
 
 .modal__container-cancel {
@@ -114,28 +132,27 @@
   top: 60px;
   font-size: 50px;
   cursor: pointer;
-  color: #FFF;
+  background: rgba(0, 0, 0, 0);
   display: none;
+  border: none;
 }
 
 .loader {
-  position: absolute;
+  position: fixed;
   top: 50%;
   left: 50%;
-  display: none;
-  z-index: 999999999;
+  display: flex;
+  align-items: center;
   justify-content: center;
-}
-
-.display__block {
-  display: block;
+  z-index: 999999999;
+  display: none;
 }
 
 .display__flex {
   display: flex;
 }
 
-.loader .loader__children {
+.loader__children {
   box-sizing: border-box;
   display: block;
   position: absolute;
@@ -160,58 +177,21 @@
   animation-delay: -.15s;
 }
 
-.main__container {
-  max-width: 1096px;
-  margin: 0 auto;
-}
-
-@media screen and (max-width:1096px) {
-
-  .main {
-    margin: 24px auto 0;
-  }
-
-  .image__block {
-    width: 267px;
-    height: 267px;
-  }
-
-  .image {
-    width: 267px;
-    height: 267px;
-    margin: 0 5.5px 11px;
-  }
+@media (min-width: 425px) and (max-width: 1194px) {
 
   .main__container {
-    max-width: 834px;
-    margin: 0 auto;
+    grid-template-columns: repeat(3, 30vw);
+    grid-auto-rows: 30vw;
   }
 }
 
-@media screen and (max-width:834px) {
+@media (max-width: 425px) {
 
   .main__container {
-    max-width: 343px;
-    margin: 0 auto;
-  }
-
-  .image__block {
-    width: 343px;
-    height: 343px;
-  }
-
-  .image {
-    width: 343px;
-    height: 343px;
-    margin: 0 0 16px;
-  }
-
-  .main__footer-image {
-    bottom: 24px;
-    right: 24px;
+    grid-template-columns: repeat(1, 90vw);
+    grid-auto-rows: 90vw;
   }
 }
-
 
 @keyframes loader {
 
