--- a/homeworks/nikolay.krasniuk_Kingstar22/7-oop/src/style.css
+++ b/homeworks/nikolay.krasniuk_Kingstar22/7-oop/src/style.css
@@ -7,6 +7,7 @@
 
 .body {
   height: 100vh;
+  position: relative;
 }
 
 .header {
@@ -26,7 +27,6 @@
 
 .main {
   display: flex;
-  position: relative;
   height: 100%;
   max-width: 1440px;
   margin: 0 auto;
@@ -123,7 +123,7 @@
   top: 0;
   left: 0;
   width: 100%;
-  height: calc(100vh - 48px);
+  height: 100%;
   backdrop-filter: blur(8px);
   background: rgba(0,0,0,.5);
   z-index: 10;
